Added bucket-like functionality with the /bind command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "google": "^1.3.0",
-    "node-telegram-bot": "0.0.17"
+    "node-telegram-bot": "0.0.17",
+    "redis": "^0.12.1",
+    "then-redis": "^1.3.0"
   }
 }
